replay-sidecar/envoy.yaml
admin:
  address:
    socket_address:
      protocol: TCP
      address: 0.0.0.0
      port_value: 9901
bootstrap_extensions:
- name: envoy.bootstrap.wasm
  typed_config:
    "@type": type.googleapis.com/envoy.extensions.wasm.v3.WasmService
    singleton: true
    config:
      configuration:
        "@type": type.googleapis.com/google.protobuf.StringValue
        value: '{"plugin_type": "bootstrap","host":"collector","post_path":"/collect"}'
      vm_config:
        vm_id: "intercept"
        runtime: "envoy.wasm.runtime.v8"
        code:
          local:
            filename: "/home/sidecar/intercept.wasm"
static_resources:
  listeners:
  - name: listener_inbound
    address:
      socket_address:
        protocol: TCP
        address: 0.0.0.0
        port_value: 15000
    listener_filters:
      - name: envoy.filters.listener.original_dst
        typed_config: {}
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          route_config:
            name: myroute
            virtual_hosts:
            - name: myservice
              domains: ["*"]
              routes:
                match:
                  prefix: "/"
                route:
                  cluster: cluster-default
          http_filters:
            - name: envoy.filters.http.wasm
              typed_config:
                "@type": type.googleapis.com/udpa.type.v1.TypedStruct
                type_url: type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
                value:
                  config:
                    configuration:
                      "@type": type.googleapis.com/google.protobuf.StringValue
                      value: '{"plugin_type": "inbound"}'
                    vm_config:
                      vm_id: "intercept"
                      runtime: "envoy.wasm.runtime.v8"
                      code:
                        local:
                          filename: "/home/sidecar/intercept.wasm"
            - name: envoy.filters.http.router
  - name: listener_outbound
    address:
      socket_address:
        protocol: TCP
        address: 0.0.0.0
        port_value: 15001
    listener_filters:
      - name: envoy.filters.listener.original_dst
        typed_config: {}
    filter_chains:
      - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              stat_prefix: ingress_http
              route_config:
                name: myroute
                virtual_hosts:
                  - name: myservice
                    domains: ["*"]
                    routes:
                      match:
                        prefix: "/"
                      route:
                        cluster: cluster-default
              http_filters:
                - name: envoy.filters.http.wasm
                  typed_config:
                    "@type": type.googleapis.com/udpa.type.v1.TypedStruct
                    type_url: type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
                    value:
                      config:
                        configuration:
                          "@type": type.googleapis.com/google.protobuf.StringValue
                          value: '{"plugin_type": "outbound"}'
                        vm_config:
                          vm_id: "intercept"
                          runtime: "envoy.wasm.runtime.v8"
                          code:
                            local:
                              filename: "/home/sidecar/intercept.wasm"
                - name: envoy.filters.http.router
  clusters:
  - name: cluster-default
    connect_timeout: 2s
    type: ORIGINAL_DST
    lb_policy: CLUSTER_PROVIDED
  - name: collector-service
    connect_timeout: 2s
    type: LOGICAL_DNS
    dns_lookup_family: V4_ONLY
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: collector
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: collector
                port_value: 80
